# SimulatorWrap

./: README.md  pyproject.toml
Example/: 3WELL.mako
Example/3WELL/: README.ipynb  README.md  TRUEPERMX.INC
Example/TINY/: PERMX.npy  RUNFILE.mako  run_sim.py  test_grad.py
Example/TINY/include/: Schdl_fixed_wi.sch
src/subsurface/multphaseflow/: eclipse.py  flow_rock.py  jutul_darcy.py  opm.py
src/subsurface/rockphysics/: softsandrp.py
tests/: test_jutul_darcy.py
