[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsurface"
version = "0.0.1"
authors = [
  { name="Kristian Fossum", email="krfo@norceresearch.no" },
]
description = "A python package containing some usefull simulator wrappers."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "numpy", 
  "scipy",
  "mako",
  "mat73",
  "scikit-learn",
  "jutuldarcy",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/Python-Ensemble-Toolbox/SimulatorWrap"
Issues = "https://github.com/Python-Ensemble-Toolbox/SimulatorWrap/ issues"
