[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsurface"
version = "0.0.1"
authors = [
  { name="Kristian Fossum", email="krfo@norceresearch.no" },
]
description = "A python package containing some usefull simulator wrappers."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "numpy", 
  "scipy",
  "mako",
  "mat73",
  "scikit-learn",
  "jutuldarcy",
  "pandas",
  "resdata",
  "resfo_utilities",
  "libecalc==8.23.1", # pin version to avoid frequent modifications
]

[project.urls]
Homepage = "https://github.com/Python-Ensemble-Toolbox/SimulatorWrap"
Issues = "https://github.com/Python-Ensemble-Toolbox/SimulatorWrap/ issues"

[tool.pytest.ini_options]
# Suppress the DeprecationWarning from `multiprocess` calling os.fork() in a
# multi-threaded process (triggered by p_tqdm's parallel worker launch).
# This is a known limitation of the fork-based multiprocessing backend and
# does not affect correctness; the warning is harmless in this context.
filterwarnings = [
    "ignore::DeprecationWarning:multiprocess",
]
